add monitor with victoriametrics
