# internal/server/handler/vm.go
@@ -13,13 +13,15 @@ import (
 
 // VMHandler implements the vm.ServerInterface generated by oapi-codegen
 type VMHandler struct {
-	monitorVMService service.MonitorVMService
+	monitorVMService       service.MonitorVMService
+	victoriaMetricsService service.VictoriaMetricsService
 }
 
-// NewVMHandler creates a new health handler
-func NewVMHandler(monitorVMService service.MonitorVMService) *VMHandler {
+// NewVMHandler creates a new vm handler
+func NewVMHandler(monitorVMService service.MonitorVMService, victoriaMetricsService service.VictoriaMetricsService) *VMHandler {
 	return &VMHandler{
-		monitorVMService: monitorVMService,
+		monitorVMService:       monitorVMService,
+		victoriaMetricsService: victoriaMetricsService,
 	}
 }
 
@@ -28,6 +30,15 @@ var _ vm.ServerInterface = (*VMHandler)(nil)
 
 func (h *VMHandler) GetMonitorVMWithProm(c *gin.Context, id uint64, metricType vm.VMMetricType, params vm.GetMonitorVMWithPromParams) {
 	res, ierr := h.monitorVMService.GetMonitorVMByType(c.Request.Context(), id, metricType, params)
+	if ierr != nil {
+		httpbase.ReturnErrorResponse(c, ierr)
+		return
+	}
+	httpbase.ReturnSuccessResponse(c, http.StatusOK, res)
+}
+
+func (h *VMHandler) GetMonitorVMWithVM(c *gin.Context, id uint64, metricType vm.VMMetricType, params vm.GetMonitorVMWithVMParams) {
+	res, ierr := h.victoriaMetricsService.GetMonitorVMByType(c.Request.Context(), id, metricType, params)
 	if ierr != nil {
 		httpbase.ReturnErrorResponse(c, ierr)
 		return
